# GADMIN-BIND

./: Autoinstall  ChangeLog  INSTALL  MAKE_RPM  MAKE_TGZ  Makefile  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h  config.h.in  config.status  config.status.lineno  configure  configure.in  gadmin-bind.spec
desktop/: gadmin-bind.desktop
etc/security/console.apps/: gadmin-bind
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  sv.gmo  sv.po  translation_howto.sh
src/: Makefile  Makefile.in  activate_button_clicked.c  activate_button_clicked.h  add_configuration.c  add_configuration.h  add_configuration_canceled.c  add_configuration_canceled.h  add_configuration_dialog.c  add_configuration_dialog.h  add_domain.c  add_domain.h  add_resource.c  add_resource.h  add_standard_user.c  add_standard_user.h  allocate.c  allocate.h  chars_are_digits.c  chars_are_digits.h  clear_log_tab.c  clear_log_tab.h  commands.c  commands.h  commented.c  commented.h  create_domain_tab.c  create_domain_tab.h  create_log_tab.c  create_log_tab.h  create_main_window.c  create_main_window.h  create_resolvers_tab.c  create_resolvers_tab.h  create_root_servers_tab.c  create_root_servers_tab.h  create_verify_tab.c  create_verify_tab.h  credits_window.c  credits_window.h  (+85 more)
src/.deps/: activate_button_clicked.Po  add_configuration.Po  add_configuration_canceled.Po  add_configuration_dialog.Po  add_domain.Po  add_resource.Po  add_standard_user.Po  allocate.Po  bind_conf_handling.Po  bldReverseIp.Po  chars_are_digits.Po  clear_log_tab.Po  commands.Po  commented.Po  create_domain_tab.Po  create_log_tab.Po  create_main_window.Po  create_resolvers_tab.Po  create_root_servers_tab.Po  create_verify_tab.Po  credits_window.Po  deactivate_button_clicked.Po  delete_domain.Po  delete_domain_from_btn.Po  delete_resource.Po  delete_resource_from_btn.Po  dialog_if_files_missing.Po  domain_settings_type_combo_changed.Po  domain_settings_window.Po  domain_treeview_row_clicked.Po  functions.Po  gadmin-bind.Po  gbindadmin.Po  ip_handling.Po  load_settings.Po  locate_icons.Po  make_settings_buttons.Po  make_settings_combos.Po  make_settings_entries.Po  new_rndc_key.Po  (+25 more)
